--- a/Potfolio1/style.css
+++ b/Potfolio1/style.css
@@ -4,12 +4,74 @@
   font-weight: 400;
 }
 
+body{
+  margin: 0;
+}
+
+header{
+  text-align: center;
+  background-color: rgb(0, 217, 255);
+  padding: 1rem;
+}
+
+nav ul{
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+}
+
 h1{
   font-size: 3.2em;
   line-height: 1.1;
+  margin: 0;
 }
 
-button{
+main{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+li{
+  list-style: none;
+}
+
+h2{
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 0.5rem;
+  margin-bottom: 0;
+}
+
+#section{
+  grid-column: 1/3;
+  width: 75%;
+  margin-left: 1rem;
+}
+
+#prosjektListe{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#nytt-prosjekt{
+  grid-column: 3;
+  width: 75%;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+}
+
+label{
+  font-size: 1.25rem;
+  padding-top: 1rem;
+}
+
+#new-project{
+  margin: 1rem;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -18,9 +80,10 @@ button{
   font-family: inherit;
   cursor: pointer;
   transition: border-color 0.25s;
+  background-color: rgb(0, 217, 255);
 }
 
-button:hover{
+#new-project:hover{
   border-color: #646cff;
 }
 
