--- a/Portfolio2/src/style/main.scss
+++ b/Portfolio2/src/style/main.scss
@@ -45,6 +45,14 @@ h2{
 
 #section{
     grid-column: 1/3;
+    grid-row: 1;
+    width: 75%;
+    margin-left: 1rem;
+}
+
+#experience{
+    grid-column: 1/3;
+    grid-row: 2;
     width: 75%;
     margin-left: 1rem;
 }
@@ -53,10 +61,20 @@ h2{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    button{
+        margin: .5rem;
+        background-color: rgb(237, 72, 72);
+        border: none;
+        border-radius: 100%;
+        padding: 2px 5px;
+        cursor: pointer;
+    }
 }
 
 #nytt-prosjekt{
     grid-column: 3;
+    grid-row: 1/3;
     width: 75%;
 }
 
@@ -85,4 +103,8 @@ label{
 
 #new-project:hover{
     border-color: #646cff;
+}
+
+#kontakt{
+    margin-left: 1rem;
 }
