--- a/Portfolio2/src/style/main.scss
+++ b/Portfolio2/src/style/main.scss
@@ -2,6 +2,7 @@
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
+    font-size: 20px;
 }
 
 body{
@@ -12,6 +13,13 @@ header{
     text-align: center;
     background-color: rgb(0, 217, 255);
     padding: 1rem;
+
+    section{
+        display: flex;
+        align-items: baseline;
+        gap: 1rem;
+
+    }
 }
 
 nav ul{
@@ -20,6 +28,15 @@ nav ul{
     flex-direction: row;
     justify-content: center;
     gap: 1rem;
+
+    a{
+        text-decoration: none;
+        color: #000;
+
+    }
+}
+a:hover{
+    text-decoration: underline black solid;
 }
 
 h1{
@@ -50,6 +67,17 @@ h2{
     margin-left: 1rem;
 }
 
+input, select{
+    padding: .25rem;
+}
+
+#sort{
+    position: relative;
+    grid-column: 1;
+    grid-row: 1;
+    margin-left: 1rem;
+}
+
 #experience{
     grid-column: 1/3;
     grid-row: 2;
@@ -61,6 +89,7 @@ h2{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-top: 2rem;
 
     button{
         margin: .5rem;
@@ -76,6 +105,7 @@ h2{
     grid-column: 3;
     grid-row: 1/3;
     width: 75%;
+    margin-top: 2rem;
 }
 
 form{
@@ -109,4 +139,14 @@ label{
 
 #kontakt{
     margin-left: 1rem;
+}
+
+footer{
+    // display: flex;
+    align-items: baseline;
+    gap: 1rem;
+    padding: 1rem;
+    justify-content: space-between;
+    background-color: #4f4f4f;
+    color: #ddd;
 }
