--- a/Portfolio2/src/style/main.scss
+++ b/Portfolio2/src/style/main.scss
@@ -72,7 +72,7 @@ input, select{
 }
 
 #sort{
-    position: relative;
+    position: absolute;
     grid-column: 1;
     grid-row: 1;
     margin-left: 1rem;
