--- a/Portfolio3/frontend/src/style/main.scss
+++ b/Portfolio3/frontend/src/style/main.scss
@@ -18,7 +18,6 @@ header{
         display: flex;
         align-items: baseline;
         gap: 1rem;
-
     }
 }
 
@@ -32,7 +31,6 @@ nav ul{
     a{
         text-decoration: none;
         color: #000;
-
     }
 }
 a:hover{
@@ -70,6 +68,10 @@ h2{
 input, select{
     padding: .25rem;
 }
+
+// input:invalid{
+//     border-color: red;
+// }
 
 #sort{
     position: absolute;
