--- a/Portfolio3/frontend/src/style/main.scss
+++ b/Portfolio3/frontend/src/style/main.scss
@@ -48,8 +48,11 @@ main{
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-li{
-    list-style: none;
+#sort{
+    position: absolute;
+    grid-column: 1;
+    grid-row: 1;
+    margin-left: 1rem;
 }
 
 h2{
@@ -63,6 +66,10 @@ h2{
     grid-row: 1;
     width: 75%;
     margin-left: 1rem;
+
+    h2{
+        margin-top: 3.23rem;
+    }
 }
 
 input, select{
@@ -73,25 +80,12 @@ input, select{
 //     border-color: red;
 // }
 
-#sort{
-    position: absolute;
-    grid-column: 1;
-    grid-row: 1;
-    margin-left: 1rem;
-}
-
-#experience{
-    grid-column: 1/3;
-    grid-row: 2;
-    width: 75%;
-    margin-left: 1rem;
-}
-
 #prosjektListe{
     display: flex;
     flex-direction: column;
+    // flex-direction: row;
     gap: 1rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
 
     button{
         margin: .5rem;
@@ -100,7 +94,29 @@ input, select{
         border-radius: 100%;
         padding: 2px 5px;
         cursor: pointer;
+        align-self: flex-start;
     }
+}
+
+// article{
+//     // display: flex;
+//     border: 1px solid #ddd;
+//     border-radius: 1rem;
+//     padding: 0rem .5rem .5rem;
+
+//     section {
+//         display: flex;
+//         flex-direction: row;
+//         flex-wrap: wrap;
+//         justify-content: space-between;
+//         align-items: center;
+//         align-content: center;
+//     }
+// }
+
+
+li{
+    list-style: none;
 }
 
 #nytt-prosjekt{
@@ -137,6 +153,13 @@ label{
 
 #new-project:hover{
     border-color: #646cff;
+}
+
+#experience{
+    grid-column: 1/3;
+    grid-row: 2;
+    width: 75%;
+    margin-left: 1rem;
 }
 
 #kontakt{
